deployments/nextcloud/nextcloud_application.yaml
# Deployment for the Nextcloud application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      securityContext:
        fsGroup: 33 # www-data group ID
      containers:
      - name: nextcloud
        image: docker.io/library/nextcloud:production-apache
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2Gi
        volumeMounts:
        - name: nextcloud-app
          mountPath: /var/www/html
        - name: post-install-script
          mountPath: /docker-entrypoint-hooks.d/post-installation
      volumes:
      - name: nextcloud-app
        persistentVolumeClaim:
          claimName: nextcloud-pvc
      - name: post-install-script
        configMap:
          name: nextcloud-post-install-script
          defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
