deployments/nextcloud/nextcloud_postgresql.yaml
# Create a deployment for the postgresql db used by Nextcloud
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-postgresql
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-postgresql
  template:
    metadata:
      labels:
        app: nextcloud-postgresql
    spec:
      containers:
      - name: postgres
        image: docker.io/library/postgres:16.4-bookworm
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Gi
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - nextcloud
          initialDelaySeconds: 30
          periodSeconds: 60  # Check every minute
          failureThreshold: 3  # Allow 3 failures before restarting
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - nextcloud
          initialDelaySeconds: 5
          periodSeconds: 60  # Check every minute
          failureThreshold: 3  # Allow 3 failures before marking as not ready
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: nextcloud-postgresql-pvc
---
# Create a service for the postgres db
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-postgresql
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
