deployments/nextcloud/nextcloud_redis.yaml
# K3s Kubernetes Deployment for a Redis db used by Nextcloud as a file cache
# https://hub.docker.com/_/redis


apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-redis
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-redis
  template:
    metadata:
      labels:
        app: nextcloud-redis
    spec:
      containers:
      - name: redis
        image: docker.io/library/redis:7.2-bookworm
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 2000m
            memory: 4Gi
        livenessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 30
          periodSeconds: 60  # Check every minute
          failureThreshold: 3  # Allow 3 failures before restarting
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 5
          periodSeconds: 60  # Check every minute
          failureThreshold: 3  # Allow 3 failures before marking as not ready
        args: ["--requirepass", "$(REDIS_PASSWORD)"]
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
