deployments/nextcloud/nextcloud_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/description: Ingress for the nextcloud deployment.
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["192.168.1.101","192.168.1.102","192.168.1.103"],"port":443,"protocol":"HTTPS","serviceName":"nextcloud:nextcloud","ingressName":"nextcloud:nextcloud","hostname":"nextcloud.local","path":"/","allNodes":false}]
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
    traefik.ingress.kubernetes.io/router.tls: 'true'
  creationTimestamp: '2024-09-11T18:11:43Z'
  generation: 1
  labels:
    app: nextcloud
    managed-by: kubectl
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/description: {}
            f:field.cattle.io/publicEndpoints: {}
            f:nginx.ingress.kubernetes.io/proxy-connect-timeout: {}
            f:nginx.ingress.kubernetes.io/proxy-read-timeout: {}
            f:nginx.ingress.kubernetes.io/proxy-send-timeout: {}
            f:traefik.ingress.kubernetes.io/router.tls: {}
          f:labels:
            .: {}
            f:app: {}
            f:managed-by: {}
        f:spec:
          f:ingressClassName: {}
          f:rules: {}
          f:tls: {}
      manager: rancher
      operation: Update
      time: '2024-09-11T18:11:43Z'
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: traefik
      operation: Update
      subresource: status
      time: '2024-09-11T18:11:43Z'
  name: nextcloud
  namespace: nextcloud
  resourceVersion: '860962'
  uid: c92cf2c9-3a47-469f-aa3a-9cd15938c8ca
spec:
  ingressClassName: traefik
  rules:
    - host: nextcloud.local
      http:
        paths:
          - backend:
              service:
                name: nextcloud
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - nextcloud.local
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.101
      - ip: 192.168.1.102
      - ip: 192.168.1.103
